remove CLI mode, GUI-only extension